# swedish-army-knife

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  task.md
.github/workflows/: ci.yml
src/: config.py  main.py  spotify_client.py  utils.py
src/commands/: playlist.py
tests/: conftest.py  fake_spotify.py  test_search_perf.py
tests/integration/: test_spotify_live.py
tests/unit/: test_config.py  test_liked_sentinel.py  test_list_tracks.py  test_main.py  test_output_formats.py  test_playlist.py  test_playlist_add.py  test_playlist_find.py  test_playlist_move_strict.py  test_resolve_playlist.py  test_search_in_playlist.py  test_spotify_client.py
