[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swedish-army-knife"
version = "0.1.0"
description = "A personal CLI toolkit for Spotify playlist automation"
requires-python = ">=3.11"
dependencies = [
    "spotipy",
    "typer",
    "rich",
    "python-dotenv",
    "rapidfuzz",
]

[project.scripts]
sak = "src.main:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "ty",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
